tests/baselines/reference/internalAliasUninitializedModuleInsideTopLevelModuleWithExport(strict=true).errors.txt
internalAliasUninitializedModuleInsideTopLevelModuleWithExport.ts(4,13): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
internalAliasUninitializedModuleInsideTopLevelModuleWithExport.ts(11,1): error TS2454: Variable 'x' is used before being assigned.


==== internalAliasUninitializedModuleInsideTopLevelModuleWithExport.ts (2 errors) ====
    export module a {
        export module b {
            export interface I {
                foo();
                ~~~~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
            }
        }
    }
    
    export import b = a.b;
    export var x: b.I;
    x.foo();
    ~
!!! error TS2454: Variable 'x' is used before being assigned.
    